# ggssgs251

./: .dockerignore  .env.example  .gitignore  =24.1.0  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
backend/: .dockerignore  Dockerfile  app.py  auth.py  config.py  database.py  logging_config.py  models.py  rag_engine.py  routes_chat.py  routes_rag.py  schemas.py
backend/guardrails/: __init__.py  checker.py  rules.py
backend/templates/: base.html  chat.html  dashboard.html  landing.html  login.html  register.html
backend/tests/: test_guardrails.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
notebooks/: 01_index_documents.ipynb  02_query_knowledge_base.ipynb  03_test_guardrails.ipynb  README.md
prompts/: README.md  code_advisor.md  data_tutor.md  guardrail_agent.md  orchestrator.md
scripts/: start.sh  start_jupyter.sh
src/: main.py  orchestrator.py
src/agents/: __init__.py  code_advisor.py  data_tutor.py
src/tools/: __init__.py  custom_tools.py
