[project]
name = "ggssgs251"
version = "0.1.0"
description = "Multi-agent AI system with orchestrator, data tutor, and code advisor using Strands Agents SDK"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[ollama]>=0.1.0",
    "strands-agents-tools>=0.1.0",
]

[project.scripts]
ggssgs251 = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = []
