[project]
name = "ggssgs251"
version = "0.1.0"
description = "Multi-agent AI system with RAG, auth, and web UI using Strands Agents SDK"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[ollama]>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "corsheaders", # handled via fastapi.middleware.cors
]

[project.scripts]
ggssgs251 = "src.main:main"
ggssgs251-api = "backend.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "backend"]
