[project]
name = "ggssgs251"
version = "0.1.0"
description = "Multi-agent AI system with RAG, auth, and web UI using Strands Agents SDK"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[ollama]>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
]

[project.scripts]
ggssgs251 = "src.main:main"
ggssgs251-api = "backend.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "backend"]

[tool.ruff]
# Target Python version
target-version = "py310"

# Enable rules
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

# Ignore rules that are too strict or don't apply
lint.ignore = [
    "E501",   # line too long (subjective)
    "N812",   # lowercase imported as non lowercase
    "N999",   # module name not valid (project-specific)
    "B008",   # function call in default argument (FastAPI Depends() pattern)
]

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions, broad exceptions, etc.
"backend/tests/*" = [
    "S101",   # assert used (allowed in tests)
    "ANN",    # missing annotations in tests
    "D",      # docstrings not required in tests
    "PLR",    # pylint refactor rules
]
# Agent code - strands imports won't resolve in CI
"src/agents/*" = [
    "F403",   # unable to detect undefined names from wildcard
]
"src/tools/*" = [
    "F403",
]
